<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_playlist_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_name_label" />

    <EditText
        android:id="@+id/et_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_file_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_label" />

    <EditText
        android:id="@+id/et_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/file_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_import_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/import_date_label" />

    <TextView
        android:id="@+id/tv_import_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_channel_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_count_label" />

    <TextView
        android:id="@+id/tv_channel_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        tools:text="@string/app_name" />

    <CheckBox
        android:id="@+id/cb_auto_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_update_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/export_playlist_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@android:string/cancel"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/save_playlist_label"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
